# argus-enterprise

./: .gitignore  DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  Dockerfile.slim  LICENSE  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  termux_setup.sh
.github/workflows/: ci.yml
argus/: .env.example  argus.db  cache.py  config.py  database.py  logging_config.py  main.py  models.py  monitor_scheduler.py  requirements.txt  retention.py
argus/api/: app.py  auth.py  deps.py  middleware.py  rate_limit.py  telegram_auth.py
argus/bot/: api_client.py  discord_bot.py  main.py  slack_bot.py
argus/canonical/: __init__.py  confidence.py  correlation.py  decision_engine.py  deps.py  ingestion.py  models.py  normalizer.py  replay.py  schemas.py  validator.py
argus/export/: chain_of_custody.py  geo.py  misp.py  reports.py  stix.py
argus/intel/: ai_cache.py  attack_navigator.py  entity_extractor.py  mitre_attack.py  ollama_client.py  plugin_deps.py  snapshot.py  ssrf.py  tagger.py  threat_scoring.py
argus/notifiers/: email_notifier.py  webhook.py
argus/plugins/: ai_analysis.py  base.py  bgp_plugin.py  blockstream_plugin.py  bluesky_plugin.py  breach_plugin.py  certs_plugin.py  cobaltstrike_plugin.py  crossref_plugin.py  crypto_tracer_plugin.py  dns_plugin.py  dnssec_plugin.py  email_age_plugin.py  email_plugin.py  (+66 more)
tests/: conftest.py  conftest_canonical.py  test_adapters.py  test_api.py  test_attack_navigator.py  test_canonical_entity_service.py  test_classifier.py  test_confidence.py  test_correlation.py  test_decision_engine.py  test_identity_resolution.py  test_ingestion.py  test_migration_0002.py  test_models.py  test_new_endpoints.py  test_normalizer.py  test_plugin_deps.py  test_rules.py  test_ssrf.py  test_validator.py
(+54 files in other folders)
