[project]
name = "argus-osint"
version = "1.0.0"
description = "Free, Telegram-first Open Source Intelligence (OSINT) investigation platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["osint", "intelligence", "telegram", "fastapi", "security", "recon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "aiogram>=3.29.0",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.15.0",
    "dnspython>=2.8.0",
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "lxml>=6.1.1",
    "passlib[bcrypt]>=1.7.4",
    "phonenumbers>=9.0.33",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-whois>=0.9.6",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.scripts]
argus = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["argus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]